[tool.poetry]
name = "go-binsize-viz"
version = "0.1.0"
description = ""
authors = ["yoshino-s <cy-cui@outlook.com>"]
readme = "README.md"
packages = [{include = "go_binsize_viz"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
